--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
 }
 .navbar ul{
+
     display: flex;
     gap: 20px;
     margin-right: 100px;
@@ -336,7 +337,7 @@ padding: 15px;
 
     }
     .Greate-website img {
-        /* display: none; */
+        display: none;
         
     }
     .We-Provide img{
